--- a/source/Views/MainPageView.xaml
+++ b/source/Views/MainPageView.xaml
@@ -1,12 +1,45 @@
-﻿<UserControl x:Class="HashChecker.Views.MainPageView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:HashChecker.Views"
-             mc:Ignorable="d" 
-             d:DesignHeight="768" d:DesignWidth="1024">
+﻿<localControls:BasePanel
+    x:Class="HashChecker.Views.MainPageView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+    xmlns:local="clr-namespace:HashChecker.Views"
+    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+    xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
+    xmlns:chrome="http://schemes.grabacr.net/winfx/2014/chrome"
+    xmlns:controls="http://schemes.grabacr.net/winfx/2014/controls"
+    xmlns:localControls="clr-namespace:HashChecker.Controls"
+    xmlns:common="clr-namespace:HashChecker.Common"
+    xmlns:prism="http://prismlibrary.com/"
+    mc:Ignorable="d" 
+    Background="Aqua"
+    d:DesignHeight="768" d:DesignWidth="1024">
+    <i:Interaction.Triggers>
+        <prism:InteractionRequestTrigger SourceObject="{Binding OpenForderNotificationRequest}">
+            <common:ShowModalWindowAction WindowType="{x:Type local:MenuOpenWindow}" />
+        </prism:InteractionRequestTrigger>
+    </i:Interaction.Triggers>
     <Grid>
-        <DataGrid />
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Menu 
+            x:Name="PART_MenuBar" 
+            Grid.Row="0" 
+            Height="{x:Static SystemParameters.MenuBarHeight}" 
+            VerticalAlignment="Stretch" 
+            HorizontalAlignment="Stretch" 
+            VerticalContentAlignment="Center"
+            Background="#AA888888" >
+            <MenuItem Header="ファイル(_F)" Background="#AA888888" Height="{Binding Height ,ElementName=PART_MenuBar}">
+                <MenuItem Header="開く(_O)" Name="PART_MenuOpen" Command="{Binding ShowWindowCommand}"/>
+                <MenuItem Header="比較(_M)" />
+                <MenuItem Header="閉じる(_C)" Command="Close"/>
+            </MenuItem>
+        </Menu>
+        <DataGrid Grid.Row="1" Width="Auto" Height="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
     </Grid>
-</UserControl>
+</localControls:BasePanel>
