--- a/source/Views/MenuOpenView.xaml
+++ b/source/Views/MenuOpenView.xaml
@@ -1,30 +1,41 @@
-﻿<UserControl  x:Class="HashChecker.Views.MenuOpenView"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:HashChecker.Views"
-      mc:Ignorable="d" 
-      Width="512"
-      Height="288">
+﻿<UserControl  
+    x:Class="HashChecker.Views.MenuOpenView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+    xmlns:local="clr-namespace:HashChecker.Views"
+    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+    xmlns:prism="http://prismlibrary.com/"
+    xmlns:common="clr-namespace:HashChecker.Common"
+    mc:Ignorable="d" 
+    Foreground="White"
+    Width="512"
+    Height="288">
+    <i:Interaction.Triggers>
+        <prism:InteractionRequestTrigger SourceObject="{Binding WindowCloseRequest}">
+            <common:WindowCloseAction />
+        </prism:InteractionRequestTrigger>
+    </i:Interaction.Triggers>
     <UserControl.Resources>
         <Style x:Key="TitleLabelStyle" TargetType="Label">
             <Setter Property="HorizontalContentAlignment" Value="Right" />
             <Setter Property="VerticalContentAlignment" Value="Center" />
             <Setter Property="Width" Value="100" />
+            <Setter Property="Foreground" Value="WhiteSmoke" />
         </Style>
     </UserControl.Resources>
     <DockPanel LastChildFill="False">
         <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" DockPanel.Dock="Top">
             <StackPanel>
-                <Label Content="比較するファイルまたはフォルダ"/>
+                <Label Content="比較するファイルまたはフォルダ" Foreground="WhiteSmoke"/>
             </StackPanel>
             <DockPanel LastChildFill="True" Margin="3">
                 <Label Style="{StaticResource TitleLabelStyle}" Content="1" />
-                <ComboBox IsEditable="True" />
+                <ComboBox IsEditable="True" Text="{Binding Text}"/>
             </DockPanel>
             <DockPanel>
-                <Button DockPanel.Dock="Right" Margin="5" Height="23" Width="100" HorizontalAlignment="Right" Background="White" Foreground="Black">ひらく</Button>
+                <Button DockPanel.Dock="Right" Margin="5" Height="23" Width="100" HorizontalAlignment="Right" Background="White" Foreground="Black">参照</Button>
             </DockPanel>
             <DockPanel LastChildFill="True" Margin="3">
                 <Label Style="{StaticResource TitleLabelStyle}" Content="2" />
@@ -42,7 +53,7 @@
             </DockPanel>
         </StackPanel>
         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button DockPanel.Dock="Right" Margin="5" Height="23" Width="100" HorizontalAlignment="Right" Background="White" Foreground="Black">OK</Button>
+            <Button DockPanel.Dock="Right" Margin="5" Height="23" Width="100" HorizontalAlignment="Right" Background="White" Foreground="Black" Command="{Binding WindowCloseCommand}">OK</Button>
             <Button DockPanel.Dock="Right" Margin="5" Height="23" Width="100" HorizontalAlignment="Right" Background="White" Foreground="Black">キャンセル</Button>
         </StackPanel>
     </DockPanel>
