--- a/source/Views/SubWindow.xaml
+++ b/source/Views/SubWindow.xaml
@@ -1,34 +1,25 @@
-﻿<controls:MetroWindow x:Class="HashChecker.Views.Shell"
-					  x:Name="Window"
-					  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-					  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+﻿<controls:MetroWindow x:Class="HashChecker.Views.SubWindow"
+                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-					  xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-					  xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
+                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 					  xmlns:chrome="http://schemes.grabacr.net/winfx/2014/chrome"
 					  xmlns:controls="http://schemes.grabacr.net/winfx/2014/controls"
-                      xmlns:localControls="clr-namespace:HashChecker.Controls"
                       xmlns:local="clr-namespace:HashChecker.Views"
-                      xmlns:common="clr-namespace:HashChecker.Common"
                       xmlns:prism="http://prismlibrary.com/"
-					  Title="HashChecker"
-                      mc:Ignorable="d"
                       prism:ViewModelLocator.AutoWireViewModel="True"
-					  Width="1024"
-					  Height="768"
-					  FontFamily="Segoe UI"
+                      mc:Ignorable="d"
+                      Title="ファイルを開く"
+                      ResizeMode="NoResize"
 					  Background="{DynamicResource ThemeBrushKey}"
-					  IsRestoringWindowPlacement="True"
-					  UseLayoutRounding="True"
-					  TextOptions.TextFormattingMode="Display"
-                      >
+                      Width="520"
+                      Height="355">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
-            <RowDefinition Height="23" />
         </Grid.RowDefinitions>
+
         <Border Grid.Row="0"
 				controls:MetroWindow.IsCaptionBar="True">
             <Grid>
@@ -55,9 +46,11 @@
 						   FontSize="18"
 						   Margin="3,0,0,0"
 						   VerticalAlignment="Center" />
-                <controls:SystemButtons Grid.Column="2"
+                <controls:CaptionButton WindowAction="Close" 
+                                        Grid.Column="2"
 										Grid.Row="0"
-										VerticalAlignment="Top" />
+										VerticalAlignment="Top"/>
+
             </Grid>
         </Border>
         <ContentControl 
@@ -66,14 +59,6 @@
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch"
             Background="{DynamicResource ThemeBrushKey}"
-            prism:RegionManager.RegionName="MainRegion"  />
-        <Grid Grid.Row="2"
-			  Background="{DynamicResource AccentBrushKey}">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-            <controls:ResizeGrip Grid.Column="1" />
-        </Grid>
+            prism:RegionManager.RegionName="SubRegion"  />
     </Grid>
 </controls:MetroWindow>
