--- a/source/Views/Shell.xaml
+++ b/source/Views/Shell.xaml
@@ -23,6 +23,13 @@
 					  UseLayoutRounding="True"
 					  TextOptions.TextFormattingMode="Display"
                       >
+    <controls:MetroWindow.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/HashChecker;component/Styles/Style.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </controls:MetroWindow.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
