--- a/source/Views/MainPageView.xaml
+++ b/source/Views/MainPageView.xaml
@@ -21,6 +21,9 @@
             <common:ShowModalWindowAction WindowType="{x:Type local:MenuOpenWindow}" />
         </prism:InteractionRequestTrigger>
     </i:Interaction.Triggers>
+    <localControls:BasePanel.CommandBindings>
+        <CommandBinding Command="Close" Executed="Close_Executed" />
+    </localControls:BasePanel.CommandBindings>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
