列移動可能など

--- a/source/Views/MainPageView.xaml
+++ b/source/Views/MainPageView.xaml
@@ -65,6 +65,7 @@
             CanUserDeleteRows="False"
             CanUserResizeColumns="True"
             CanUserResizeRows="False"
+            CanUserReorderColumns="True"
             HeadersVisibility="All"
             ItemsSource="{Binding GridData}">
             <DataGrid.Resources>
