--- a/source/Views/MainPageView.xaml
+++ b/source/Views/MainPageView.xaml
@@ -43,7 +43,7 @@
             <MenuItem Header="ファイル(_F)" Background="#AA888888" Height="{Binding Height ,ElementName=PART_MenuBar}">
                 <MenuItem Header="開く(_O)" Name="PART_MenuOpen" Command="{Binding ShowWindowCommand,UpdateSourceTrigger=PropertyChanged}"/>
                 <MenuItem Header="ハッシュ値 比較(_M)" Command="{Binding ExecuteMergeHashCommand,UpdateSourceTrigger=PropertyChanged}"/>
-                <MenuItem Header="比較結果(_R)" Command="{Binding ShowResultWindowCommand,UpdateSourceTrigger=PropertyChanged}"/>
+                <!--<MenuItem Header="比較結果(_R)" Command="{Binding ShowResultWindowCommand,UpdateSourceTrigger=PropertyChanged}"/>-->
                 <MenuItem Header="閉じる(_C)" Command="Close"/>
             </MenuItem>
             <!--<MenuItem Header="編集(_E)" Background="#AA888888" Height="{Binding Height ,ElementName=PART_MenuBar}">
